[package]
name = "wba_rust_prereq"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = "0.5.1"
serde_json = "1.0.120"
serde = { version = "1.0.120", features = ["derive"] }
solana-client = "1.15.2"
solana-program = "1.15.2"
solana-sdk = "1.15.2"
borsh = "0.10.3"
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }
dotenvy = "0.15.7"
